--- a/fantasy/Dynasty_23_24_Prep.ipynb
+++ b/fantasy/Dynasty_23_24_Prep.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do this with Beautiful soup?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
