--- a/fantasy/Dynasty_23_24_Prep.ipynb
+++ b/fantasy/Dynasty_23_24_Prep.ipynb
@@ -4,17 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do this with Beautiful soup?"
+    "Do all of this with Beautiful Soup?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fantasy Footballers UDK Rankings\n",
+    "\n",
+    "https://www.thefantasyfootballers.com/2023-ultimate-draft-kit/udk-dynasty-startup-rankings/"
    ]
   },
   {
@@ -90,6 +99,115 @@
    "source": [
     "# Write csv\n",
     "all_fnl.to_csv('Dynasty_23_24_Clean.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sleeper ADP\n",
+    "\n",
+    "https://www.ftnfantasy.com/nfl/tools/sleeper-fantasy-football-adp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read in adp data\n",
+    "adp = pd.read_csv('Sleeper_ADP_23_24.csv') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\crudek\\AppData\\Local\\Temp\\ipykernel_14644\\2283342804.py:27: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  age_rook.loc[age_rook['Rook_Rnk'] != '', 'Rook'] = 'True'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove cols\n",
+    "adp = adp.drop(columns = ['Redraft SF ADP', 'Dynasty SF ADP', 'IDP ADP'])\n",
+    "\n",
+    "# Dynasty PPR\n",
+    "adp_dyn_ppr = adp[[\"Player\", \"Team\", \"Position\", \"Dynasty PPR ADP\"]].sort_values(\"Dynasty PPR ADP\")\n",
+    "\n",
+    "# remove nan\n",
+    "adp_dyn_ppr = adp_dyn_ppr[adp_dyn_ppr['Dynasty PPR ADP'].notna()]\n",
+    "\n",
+    "# create dynasty ppr rank\n",
+    "adp_dyn_ppr['ADP_Rnk'] = adp_dyn_ppr['Dynasty PPR ADP'].rank(ascending=True).astype(np.int64)\n",
+    "\n",
+    "# create position rankings\n",
+    "adp_dyn_ppr['Pos_Rnk'] = adp_dyn_ppr.groupby('Position')['Dynasty PPR ADP'].rank(ascending=True).astype(np.int64)\n",
+    "\n",
+    "adp_dyn_ppr['ADP_Pos_Rnk']  = adp_dyn_ppr['Position'] + \"-\" + adp_dyn_ppr['Pos_Rnk'].astype(str)\n",
+    "\n",
+    "# select columns and final cleaning\n",
+    "adp_dyn_ppr = adp_dyn_ppr.rename(columns = {'ADP_Rnk': 'ADP_Rank', 'Player': 'Name', 'Position': 'Pos'})\n",
+    "\n",
+    "adp_dyn_ppr = adp_dyn_ppr[[\"ADP_Rank\", \"Name\", \"Team\", \"Pos\", \"ADP_Pos_Rnk\"]]\n",
+    "\n",
+    "# get age and rookie info\n",
+    "age_rook = all_fnl[[\"Name\", \"Age\", \"Rook_Rnk\"]]\n",
+    "\n",
+    "# prep\n",
+    "age_rook.loc[age_rook['Rook_Rnk'] != '', 'Rook'] = 'True' \n",
+    "age_rook = age_rook.replace(np.nan, '', regex=True)\n",
+    "age_rook = age_rook[[\"Name\", \"Age\", \"Rook\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# join age and rookie info\n",
+    "adp_comb = pd.merge(adp_dyn_ppr, age_rook, on = 'Name', how = 'left')\n",
+    "adp_comb = adp_comb.replace(np.nan, '', regex=True)\n",
+    "adp_comb['Rook_Rnk'] = adp_comb.groupby('Rook')['ADP_Rank'].rank(ascending=True)\n",
+    "\n",
+    "# get rookie rank to be able to join back\n",
+    "just_rook = adp_comb[(adp_comb.Rook == \"True\")]\n",
+    "just_rook = just_rook[[\"Name\", \"Rook_Rnk\"]]\n",
+    "\n",
+    "# remove a coup[le cols before joining back]\n",
+    "adp_comb = adp_comb.drop(columns = ['Rook_Rnk', 'Rook'])\n",
+    "\n",
+    "# join back rookie\n",
+    "adp_rook_comb = pd.merge(adp_comb, just_rook, on = 'Name', how = 'left')\n",
+    "adp_rook_comb = adp_rook_comb.replace(np.nan, '', regex=True)\n",
+    "\n",
+    "# move age column\n",
+    "move_age = adp_rook_comb.pop(\"Age\")\n",
+    "# insert column with insert(location, column_name, column_value)\n",
+    "adp_rook_comb.insert(3, \"Age\", move_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write csv\n",
+    "adp_rook_comb.to_csv('Sleeper_PPR_Dyn_ADP_23_24.csv', index = False)"
    ]
   }
  ],
