--- a/fantasy/Dynasty_23_24_Prep.ipynb
+++ b/fantasy/Dynasty_23_24_Prep.ipynb
@@ -93,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write csv\n",
-    "all_fnl.to_csv('Dynasty_23_24_Clean.csv', index = False)"
+    "all_fnl.to_csv('Dynasty_FF_Rankings_23_24_Clean.csv', index = False)"
    ]
   },
   {
@@ -202,12 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write csv\n",
-    "adp_rook_comb.to_csv('Sleeper_PPR_Dyn_ADP_23_24.csv', index = False)"
+    "adp_rook_comb.to_csv('Sleeper_PPR_Dyn_ADP_23_24_Clean.csv', index = False)"
    ]
   }
  ],
