--- a/fantasy/Dynasty_23_24_Prep.ipynb
+++ b/fantasy/Dynasty_23_24_Prep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2802743263.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    https://www.ftnfantasy.com/nfl/tools/sleeper-fantasy-football-adp\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Sleeper ADP\n",
     "\n",
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +217,108 @@
    "source": [
     "# Write csv\n",
     "adp_rook_comb.to_csv('Sleeper_PPR_Dyn_ADP_23_24_Clean.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ESPN API / Scrape\n",
+    "\n",
+    "Test to get historical league resultsd and try to determine keepers\n",
+    "\n",
+    "leagueId = 1057699\n",
+    "seasonId = 2023 (whatever year you are looking for)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2022 example\n",
+    "Rosters = https://fantasy.espn.com/football/league/rosters?leagueId=1057699&seasonId=2022\n",
+    "\n",
+    "Draft = https://fantasy.espn.com/football/league/draftrecap?seasonId=2022&leagueId=1057699"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# League of Goo\n",
+    "\n",
+    "Redraft with Staley"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dynasty PPR\n",
+    "adp_redraft = adp[[\"Player\", \"Team\", \"Position\", \"Redraft Half PPR ADP\"]].sort_values(\"Redraft Half PPR ADP\")\n",
+    "\n",
+    "# remove nan\n",
+    "adp_redraft = adp_redraft[adp_redraft['Redraft Half PPR ADP'].notna()]\n",
+    "\n",
+    "# create dynasty ppr rank\n",
+    "adp_redraft['ADP_Rnk'] = adp_redraft['Redraft Half PPR ADP'].rank(ascending=True).astype(np.int64)\n",
+    "\n",
+    "# create position rankings\n",
+    "adp_redraft['Pos_Rnk'] = adp_redraft.groupby('Position')['Redraft Half PPR ADP'].rank(ascending=True).astype(np.int64)\n",
+    "\n",
+    "adp_redraft['ADP_Pos_Rnk']  = adp_redraft['Position'] + \"-\" + adp_redraft['Pos_Rnk'].astype(str)\n",
+    "\n",
+    "# select columns and final cleaning\n",
+    "adp_redraft = adp_redraft.rename(columns = {'ADP_Rnk': 'ADP_Rank', 'Player': 'Name', 'Position': 'Pos'})\n",
+    "\n",
+    "adp_redraft = adp_redraft[[\"ADP_Rank\", \"Name\", \"Team\", \"Pos\", \"ADP_Pos_Rnk\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write csv\n",
+    "adp_redraft.to_csv('Sleeper_Redraft_ADP_23_24_Clean.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# get age and rookie info\n",
+    "age_rook = all_fnl[[\"Name\", \"Age\", \"Rook_Rnk\"]]\n",
+    "\n",
+    "# prep\n",
+    "age_rook.loc[age_rook['Rook_Rnk'] != '', 'Rook'] = 'True' \n",
+    "age_rook = age_rook.replace(np.nan, '', regex=True)\n",
+    "age_rook = age_rook[[\"Name\", \"Age\", \"Rook\"]]"
    ]
   }
  ],
